--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/metro-runtime": "^3.2.3",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-safe-area-context": "^4.11.1",
+    "react-native-animatable": "^1.4.0",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.10",
     "tailwindcss-react-native": "^1.7.10",
